[package]
name = "kapeefetch"
version = "0.1.0"
edition = "2021"
description = "yet another unix fetch package, because why the heck not."
repository = "https://github.com/Kapeet/kapeefetch"

[profile.release]
opt-level = 'z'
kti = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
